--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@0.11.2"> </script>
   <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
   <script language="javascript" src="libraries/p5.dom.js"></script>
-  <script language="javascript" type="text/javascript" src="data.js"></script>
+  <script language="javascript" type="text/javascript" src="data_15.js"></script>
   <script language="javascript" type="text/javascript" src="sketch.js"></script>
 
 </head>
